# idetozephyr

./: CMakeLists.txt  prj.conf
lib/: CMakeLists.txt
src/: main.cpp
